@@ -1,3 +1,8 @@
+2008-01-11 Andrew J. Schorr <ajschorr@alumni.princeton.edu>
+
+	* zebra.h: Revert previous change, no need to include <net/if_media.h>
+	  here.
+
 2008-01-10 Ingo Flaschberger <if@xip.at>
 
 	* zebra.h: If HAVE_BSD_LINK_DETECT is defined, include <net/if_media.h>.
